# pid-controller-c

./: .gitignore  CMakeLists.txt  README.md
include/: pid.h
src/: gui.c  main.c  pid.c
test/: test_pid.c
